--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     transition: all 1s ease;
   }
 
+  body {
+    background: #333;
+  }
+
   #code {
     width: 80%;
     font-family: monospace;
