--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
 
 </head>
 
-<body id="root">
-<iframe id="display" srcdoc=""></iframe>
+<body id="root" class="hide-code">
+<iframe id="display" srcdoc="" allowtransparency="true"></iframe>
 <textarea id="code"></textarea>
+<footer>
+  <button onclick="toggleCode()">&lt; &gt;</button>
+</footer>
 
 <style>
  * {
-    font-family: inherit;
+    font-family: monospace;
     word-wrap: break-word;
     box-sizing: border-box;
     margin: 0;
@@ -45,17 +48,51 @@
     background: #333;
   }
 
+  body.hide-code #code {
+    height: 0;
+    padding: 0;
+    z-index: -1;
+    visibility: hidden;
+  }
+
   #code {
+    display: block;
     width: 80%;
+    height: 80vh;
     font-family: monospace;
     font-size: small;
     padding: 0.6em;
+    position: absolute;
+    bottom: 0;
+    z-index: 99;
+    margin: 1em;
   }
 
   iframe {
     width: 100vw;
     height: 100vh;
     border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+  }
+
+  footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  footer button {
+    position: fixed;
+    font-size: 1em;
+    bottom: 0;
+    right: 0;
+    margin: 1em;
+    padding: 0.5em;
+    z-index: 999;
   }
 </style>
 
@@ -65,7 +102,7 @@
   const code = document.getElementById('code');
 
   function toggleCode() {
-    code.style.height = code.style.height === '' ? '1000px' : '';
+    body.classList.toggle('hide-code');
   }
 
   function setLocal(name,value ) {
@@ -75,11 +112,6 @@
   function getLocal(name) {
     return JSON.parse(localStorage.getItem(name));
   }
-
-  code.addEventListener('focus', () => {
-    console.log(code)
-    toggleCode();
-  });
 
   code.addEventListener('input', () => {
     setLocal('code', code.value);
